--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,19 @@ td {
     height: 20px;
     width: 20px;
 }
+
+#red{
+    background-color: red;
+}
+
+#blue{
+    background-color: blue;
+}
+
+#green{
+    background-color: green;
+}
+
+#yellow{
+    background-color: yellow;
+}
