--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 button {
-    border: 12px;
-    background-color: black;
+    border: 2px solid black;
+    background-color: white;
     text-align: center;
-    color: white;
+    color: black;
 }
 
 #table {
